--- a/templates/links.html
+++ b/templates/links.html
@@ -44,6 +44,8 @@
     <script src=" {% static 'js/bootstrap-datepicker.min.js' %} "></script>
     <script src=" {% static 'js/aos.js' %} "></script>
     <script src=" {% static 'js/rangeslider.min.js' %} "></script>
+    <script src="https://use.fontawesome.com/2421207b42.js"></script>
+
     
   
     <script src=" {% static 'js/typed.js' %} "></script>
